--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Drivers</string>
+    <string name="user_name">User Name</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="login">login</string>
+    <string name="submit">Submit</string>
+    <string name="dropoffdetails">Drop-Off Details</string>
+    <string name="pickupdetails">Pick-Up Details</string>
+    <string name="policy">Policy</string>
+    <string name="description">Description</string>
+    <string name="Remarks">Remarks</string>
+    <string name="titlebookingdetail">Booking Detail</string>
+    <string name="logout">Logout</string>
 </resources>
