--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Drivers</string>
+    <string name="app_name">OT Drivers</string>
     <string name="user_name">User Name</string>
     <string name="password">Password</string>
     <string name="forgot_password">Forgot Password</string>
@@ -12,4 +12,10 @@
     <string name="Remarks">Remarks</string>
     <string name="titlebookingdetail">Booking Detail</string>
     <string name="logout">Logout</string>
+
+
+    <string name="lbl_you_are_at">YOU ARE AT</string>
+    <string name="btn_get_location">GET MY LOCATION</string>
+    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
+    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
 </resources>
